dark mode issue with quotes

--- a/0x02-CSS_advanced/styles/25-style.css
+++ b/0x02-CSS_advanced/styles/25-style.css
@@ -190,10 +190,10 @@ ul.row {
 .social-link {
     display: block;
 }
-.social-link cvg {
-    color: var(--text-color);
+.social-link > svg {
+    fill: var(--text-color);
 }
-.card-services.card-title {
+.card-services .card-title {
     margin: 0;
 }
 .card-services a {
@@ -207,11 +207,11 @@ ul.row {
     text-decoration: none;
 }
 
-[class*="col-"] {
+[class*='col-'] {
     float: left;
     padding: 0.5rem;
 }
-[data-section-theme=“dark”] {
+[data-section-theme="dark"] {
     --text-color: var(--color-white);
     --section-title-color: var(--color-white);
     background-color: var(--color-black);
